--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" type="text/css" href="select2.min.css"/>
 </head>
 <body>
-    <h2>VEHSS Indicator visualization - for review of VEHSS indicator content and organization</h2>
-<h4>Includes ALL VEHSS Indicators, including subgroup/response stratification level that are not shown in website search boxes (5th layer of nodes). 
-    These would be used for stratifying tables or line/bar charts on the VEHSS website</h4>
-<h7>Instructions:
-    Search by name or scroll in search box below to locate indicators, click to show routes.  Refresh page to clear routes.  Explore tree by clicking
-     on nodes to expand/collapse. Click and hold white space to drag tree on screen.</h7>
+
+<h2>
+    VEHSS Indicator visualization - for review of VEHSS indicator content and organization
+</h2>
+<h4>
+    Includes ALL VEHSS Indicators, including subgroup/response stratification level that are not shown in website search boxes (5th layer of nodes). 
+    These would be used for stratifying tables or line/bar charts on the VEHSS website
+</h4>
+<h7>
+    Instructions:
+    Search by name or scroll in search box below to locate indicators, click to show routes.  Refresh page to clear routes.
+</h7>
+<h7> 
+    Explore tree by clicking on nodes to expand/collapse. Click and hold white space to drag tree on screen. Use scroll wheel or ctrl+left click to zoom.
+</h7>
 
         <div class="search-box">
             <div id="block_container">
