--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Search by name or scroll in search box below to locate indicators, click to show routes.  Refresh page to clear routes.
 </h7>
 <h7> 
-    Explore tree by clicking on nodes to expand/collapse. Click and hold white space to drag tree on screen. Use scroll wheel or ctrl+left click to zoom.
+    Explore tree by clicking on nodes to expand/collapse. Click and hold white space to drag tree on screen. Use scroll wheel or double click to zoom.
 </h7>
 
         <div class="search-box">
