--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     
     
-<button type="button" onClick="refreshPage()">Close</button>
+<button type="button" onClick="refreshPage()">Refresh</button>
 <script>
 function refreshPage(){
     window.location.reload();
