--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>
-    VEHSS Indicator visualization - for review of VEHSS indicator content and organization
+    VEHSS Indicator visualization 3 - for review of VEHSS indicator content and organization
 </h2>
 <h4>
     Includes ALL VEHSS Indicators, including subgroup/response stratification level that are not shown in website search boxes (5th layer of nodes). 
