--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>
-    VEHSS Indicator visualization - for review of VEHSS indicator content and organization
+    VEHSS Indicator visualization 3 - for review of VEHSS indicator content and organization
 </h2>
 
 <h7>
@@ -85,7 +85,7 @@
                         outer_update(tree_root);
                         tree_root.children.forEach(centerSearchTarget);
                     })
-                    var treeJSON = d3.json("JSON_output-rev9.json", draw_tree);
+                    var treeJSON = d3.json("JSON_output-rev10.json", draw_tree);
                 });
         </script>
         <script>
